# cantaloupe

./: CMakeLists.txt  README.md
core/: CMakeLists.txt
core/include/can-macos/: log.h  usb_wrapper.h
core/include/cantaloupe/: can_frame.h  canable_cmds.h  gs_usb_commands.h  gs_usb_wrapper.h  libusb_forward_declare.h  log.h  usb_wrapper.h
core/src/: can-macos.cpp  cantaloupe.cpp  gs_usb_wrapper.cpp  log.cpp  test_cantaloupe.cpp  usb_wrapper.cpp
images/: cantaloupe_attribution.url
include/can-macos/: usb_wrapper.h
src/: can-macos.cpp
